src/objects/PVWatts_Production_Estimates__c.object
<CustomObject>
    <description>This object stores PVWatts monthly production estimates based on projected annual production.</description>
    <fields>
        <fullName>Annual_Total__c</fullName>
        <label>Annual Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCrating__c</fullName>
        <description>System Size in kW times Overall TSRF</description>
        <label>DCrating</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>PVWatts Production Estimates</relationshipLabel>
        <relationshipName>PVWatts_Production_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>PVWatts Latitude is based on 40kmsq grid</description>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>PVWatts Longitude is based on 40km sq grid</description>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>PVWatts Production Estimates</label>
    <nameField>
        <displayFormat>PVW-{0000000}</displayFormat>
        <label>PVWatts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PVWatts Production Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>